--- a/Source/FritzBox.Net/FritzBox.Net.csproj
+++ b/Source/FritzBox.Net/FritzBox.Net.csproj
@@ -1,30 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <Authors>Patrick Schubert</Authors>
-    <Company />
-    <Product>PS Fritz!Box API</Product>
-    <Description>API for accessing the TR-064 interface of AVM Fritz!Box devices.</Description>
-    <Copyright>Patrick Schubert</Copyright>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageLicenseUrl>https://github.com/inflames2k/PS.FritzBox.API/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/inflames2k/PS.FritzBox.API</PackageProjectUrl>
-    <RepositoryType>Git</RepositoryType>
-    <AssemblyVersion>1.2.4.1</AssemblyVersion>
-    <Version>1.2.3</Version>
-    <RepositoryUrl>https://github.com/inflames2k/PS.FritzBox.API.git</RepositoryUrl>
-    <FileVersion>1.2.4.1</FileVersion>
-    <PackageTags>AVM, Fritz!Box, Fritz.Box, TR064, UPnP</PackageTags>
-    <PackageReleaseNotes>Fixed Typo in WANDSLInterfaceStatistics
-Fixed reading WANDSLInterfaceInfo</PackageReleaseNotes>
-	<IncludeSymbols>true</IncludeSymbols>
-  <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard1.6\PS.FritzBox.API.xml</DocumentationFile>
-  </PropertyGroup>
-
+    <PropertyGroup>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 </Project>
