--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,11 @@
+networks:
+  local_home:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 192.168.188.0/24
+
 services: 
   fritzExporter:
     container_name: fritzexporter
@@ -11,4 +19,5 @@ services:
       dockerfile: Source/Dockerfile
     ports:
       - "5560:80"
-    network_mode: "host"
+    networks:
+      - local_home   
